--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 			<svg width="960" height="550"></svg>
+			<p id='source'>Source : http://www.bea.gov/national/pdf/nipaguid.pdf</p>
 		</div>
 		<script type="text/javascript" src="main.js"></script>
 		<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
