--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 		<title>FRED</title>
 	</head>
 	<body>
-			<svg width="960" height="550"></svg>
-			<p id='source'>Source : http://www.bea.gov/national/pdf/nipaguid.pdf</p>
+		<h1>Gross Domestic Product (USA) 1947 - 2015</h1>
+		<svg width="1250" height="500"></svg>
+		<div id='tooltip'></div>
+		<p id='source'>Source : http://www.bea.gov/national/pdf/nipaguid.pdf</p>
 
 		<script type="text/javascript" src="main.js"></script>
 	</body>
