--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	</head>
 	<body>
 		<h1>Gross Domestic Product (USA) 1947 - 2015</h1>
+		<div id='container'>
 		<svg width="1250" height="500"></svg>
 		<div id='tooltip'></div>
+		</div>
 		<p id='source'>Source : http://www.bea.gov/national/pdf/nipaguid.pdf</p>
 
 		<script type="text/javascript" src="main.js"></script>
