--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link rel="stylesheet" href="style.css" />
-		<title>FRED</title>
+		<title>BarChart</title>
 	</head>
 	<body>
 		<h1>Gross Domestic Product (USA) 1947 - 2015</h1>
 		<div id='container'>
-		<svg width="1250" height="500"></svg>
+		<svg></svg>
 		<div id='tooltip'></div>
 		</div>
 		<p id='source'>Source : http://www.bea.gov/national/pdf/nipaguid.pdf</p>
