data insteada of source

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<svg></svg>
 		<div id='tooltip'></div>
 		</div>
-		<p id='source'>Source : http://www.bea.gov/national/pdf/nipaguid.pdf</p>
+		<p id='source'>Data : https://raw.githubusercontent.com/freeCodeCamp/ProjectReferenceData/master/GDP-data.json</p>
 
 		<script type="text/javascript" src="main.js"></script>
 	</body>
